--- a/templates/beauty.html
+++ b/templates/beauty.html
@@ -1,8 +1,9 @@
 {% load form_filters %}
+{% load static %}
 <html class="">
               
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -16,7 +17,7 @@
     
 <style>
   * {
-    font-family: "Inter", sans-serif;
+    font-family: "Work Sans", sans-serif;
   }
 
   ::-webkit-scrollbar {
@@ -331,7 +332,9 @@
     <!-- Header -->
     <header id="header" class="fixed w-full bg-white/80 backdrop-blur-sm z-50 py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
-            <div class="text-2xl font-bold text-[#9B8BB4]">emmi brow design</div>
+            <div>
+                <img src="{% static 'images/logo_emmi.png' %}" alt="Logo Emmi Brow" class="h-14 md:h-20 w-20">
+              </div>              
             <div class="hidden md:flex space-x-6">
                 <a href="#services" class="text-gray-600 hover:text-[#9B8BB4]">Servicios</a>
                 <a href="#about" class="text-gray-600 hover:text-[#9B8BB4]">Nosotros</a>
