--- a/templates/beauty.html
+++ b/templates/beauty.html
@@ -333,7 +333,7 @@
     <header id="header" class="fixed w-full bg-white/80 backdrop-blur-sm z-50 py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div>
-                <img src="{% static 'images/logo_emmi.png' %}" alt="Logo Emmi Brow" class="h-14 md:h-20 w-20">
+                <img src="{% static 'images/logo_emmi2.png' %}" alt="Logo Emmi Brow" class="h-14 md:h-20 w-21">
               </div>              
             <div class="hidden md:flex space-x-6">
                 <a href="#services" class="text-gray-600 hover:text-[#9B8BB4]">Servicios</a>
