--- a/templates/index.html
+++ b/templates/index.html
@@ -352,7 +352,7 @@
     <header id="header" class="py-6 px-8 bg-white/80 backdrop-blur-sm">
         <div class="container mx-auto flex items-center justify-between">
           <a href="{% url 'home' %}" class="flex items-center gap-3">
-            <img src="{% static 'images/logo_emmi.png' %}" alt="Emmi Logo" class="h-20 w-20 ">
+            <img src="{% static 'images/logo_emmi2.png' %}" alt="Emmi Logo" class="h-20 w-21 ">
         </a>
             <nav class="flex gap-6">
               <a href="#booking" class="text-gray-600 hover:text-[#FFB6C1]">Inicio</a>
@@ -468,7 +468,7 @@
         <div class="container mx-auto px-8">
             <div class="flex justify-between items-center">
               <a href="{% url 'home' %}" class="flex items-center gap-3">
-                <img src="{% static 'images/logo_emmi.png' %}" alt="Emmi Logo" class="h-20 w-20 ">
+                <img src="{% static 'images/logo_emmi2.png' %}" alt="Emmi Logo" class="h-20 w-21 ">
             </a>
                 <div class="flex gap-4">
                     <a href="#" class="text-gray-600 hover:text-[#FFB6C1]">
