--- a/templates/index.html
+++ b/templates/index.html
@@ -381,7 +381,7 @@
     <h3 class="text-2xl text-white font-semibold mb-2">Emmi Brow Design</h3>
     <p class="text-white/90 font-light mb-4">Diseño y cuidado experto para tus cejas</p>
       <a href="{% url 'brow_design' %}" class="bg-[#A7D2CB] text-gray-800 px-8 py-3 rounded-lg hover:bg-[#F2D388] transition duration-300 inline-block">
-          Agendar cita
+          Descubrir Servicios
       </a>
   </div>
 </div>
