--- a/templates/index.html
+++ b/templates/index.html
@@ -380,7 +380,7 @@
   <div class="absolute bottom-0 left-0 right-0 p-6">
     <h3 class="text-2xl text-white font-semibold mb-2">Emmi Brow Design</h3>
     <p class="text-white/90 font-light mb-4">Diseño y cuidado experto para tus cejas</p>
-      <a href="{% url 'brow_design' %}" class="bg-[#A7D2CB] text-gray-800 px-8 py-3 rounded-lg hover:bg-[#F2D388] transition duration-300 inline-block">
+      <a href="{% url 'barrasa' %}" class="bg-[#A7D2CB] text-gray-800 px-8 py-3 rounded-lg hover:bg-[#F2D388] transition duration-300 inline-block">
           Descubrir Servicios
       </a>
   </div>
@@ -395,7 +395,7 @@
   <div class="absolute bottom-0 left-0 right-0 p-6">
       <h3 class="text-2xl text-white font-semibold mb-2">Emmi Wellness Therapies</h3>
       <p class="text-white/90 font-light mb-4">Terapias holísticas para tu bienestar</p>
-      <a href="{% url 'wellness' %}" class="bg-[#98FF98] hover:bg-[#98FF98]/90 text-gray-800 px-6 py-3 rounded-lg shadow-lg backdrop-blur-sm inline-block">
+      <a href="{% url 'beauty' %}" class="bg-[#98FF98] hover:bg-[#98FF98]/90 text-gray-800 px-6 py-3 rounded-lg shadow-lg backdrop-blur-sm inline-block">
           Descubrir Terapias
       </a>
   </div>
